# team-mate-project

./: README.md
agentic-rag/: Cargo.toml  secrets.toml.example
agentic-rag/src/: agents.rs  file.rs  files.rs  main.rs
client/: bun.lockb
