[package]
name = "team-mate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.0"
qdrant-client = "1.9.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shuttle-qdrant = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1"
uuid = { version = "1.8.0", features = ["v4"] }
